Fix alignment and color

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -101,7 +101,7 @@ a {
 
     &:hover {
         color: $text-color;
-        text-decoration: underline;
+        text-decoration: none;
     }
 }
 
